Updates the update_metadata.sh script to Java 11, used script to update metadata on all handwritten classes.
PiperOrigin-RevId: 601585717